--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.4",
     "ioredis": "^5.9.2",
+    "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
     "limiter": "^3.0.0",
     "lucide-react": "^0.563.0",
